css/styles.css
* {
    box-sizing: border-box;
}

body {
    color:black;
    background-color: white;
    font-family: 'Space Grotesk', sans-serif;
    width: 100vw;
}

h1, h3 {
    font-family: 'Oswald', sans-serif;
}

section {
    padding: 0 1em;
}

a {
    text-decoration: none;
    color: #50BEE1;
    transition-duration: .5s;
}


a:hover {
    color: #D3A7DB;
    transition-duration: .5s;
}

a:visited {
    color:#AE8AB5;
}

img {
    width: 100%;
    height: auto;
    margin: 0 auto;
    padding: 1em;
}

nav {
    display: flex;
    text-transform: uppercase;
    position: relative;
    padding: 10px;
    font-family: 'Oswald', sans-serif;
}

nav ul {
    margin: 0 auto;
    padding-left: 0;
}

nav li {
    position: relative;
    margin: 3px 0;
    padding: .5em 7em;
    list-style: none;
    font-weight: 600;
    font-size: large;
    text-transform: uppercase;
    background-color: #D9EAFF;
}


h1 {
    text-align: center;
    font-size: 2em;
    margin: 0;
    padding: 1em;
}

#about {
    text-align: center;
    background-color: #FCECF9;
    padding: 0 1em 1em 0;
}

#about p {
    padding: 0 1em;
}

h3 {
    text-align: center;
    margin: 3em 0;
    padding-top: 15px;
    text-transform: uppercase;
}

.content {
    text-align: center;
    display: grid;
    grid-template-columns: 1fr;
}

.content span {
    font-weight:600;
    font-size: large;
    font-family: 'Oswald', sans-serif;
}

#skills-ctn {
    display: grid;
    grid-template-columns: 3fr;
    grid-template-rows: 3fr;
    text-align: center;
}

#skills-ctn img {
    margin-bottom: 2em;
    width: 50%;
    height: auto;
}




#contact-ctn {
    background-color: #FCECF9;
    margin: 1em -1em -1em;
    text-align: center;
    padding: 0 1em;
}

#contact h3 {
    padding-top: 2.5em;
    margin-bottom: 0;
}

#contact-ctn span {
    font-weight: 600;
}

#contact-info-ctn {
    padding-bottom: 5em;
}

footer, .smaller {
    background-color: #FCECF9;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 1em;
    font-weight: 600;
    margin-top: -2px;
}

.larger {
    display: none;
}



/* Media Queries for Larger Screen Sizes Here */

@media (min-width: 768px)
{
    #about {
        text-align: justify;
        padding: 1% 0 25%;
    }

    #about img {
        width: 50%;
        height: auto;
        margin: 0 auto;
        padding: 1em;
        float: right; 
    }

    #about p {
        padding: 1em 2em;
    }

    h1 {
        margin-bottom: -.5em;
    }

    nav li {
        display: inline;
        background: transparent;
        padding: .5em;
    }
    
    .content {
        display: grid;
        grid-template-columns: 1fr 1fr;
        grid-template-rows: 1fr 1fr;
        column-gap: 1em;
    } 


    #contact-ctn {
     padding: 0 20%;
    }   

    .smaller{
        display: none;
    }

    footer, .larger {
        background-color: #FCECF9;
        display: flex;
        justify-content: space-between;
        padding: 0 3em;
        font-weight: 600;
        margin-top: -2px;
        width: 100vw;
    }

    footer


    .larger {
        margin-top: 4.5em;
    }

    .larger nav {
        margin-top: 0;
    }

    .larger a {
        font-size: small;
    }
}

@media (min-width: 1024px) {

    h1 {
        text-align: left;
    }

   nav {
       float: right;
       margin-top: -3.5em;
   }
    .content {
        display: grid;
        grid-template-columns: 1fr 1fr 1fr;
        grid-template-rows: 1fr 1fr;
    }

}

